fix footer menu spacing

--- a/components/sass/_modules.scss
+++ b/components/sass/_modules.scss
@@ -19,12 +19,17 @@ ul{
     padding-bottom:$padding;
   }//ul li
 
+
 }// ul
 
 footer ul{
   margin-top:0;
   ul{
+    padding-top:$padding;
     padding-left: 2em;
+    li:last-child{
+      padding-bottom:0;
+    }
   }
 }
 
